syntax = "proto3";

enum TelemetryComponentType {
  UNKNOWN = 0;
  hitsSearcher = 1;
  facetSearcher = 2;
  multiSearcher = 3;
  answersSearcher = 4;
  filterState = 5;
  dynamicFacets = 6; // Dynamic Facets
  hierarchicalFacets = 7; // Hierarchical Menu
  facetList = 8; // Refinement List
  filterClear = 9; // Clear Filters
  facetFilterList = 10; // Filter List (Facet)
  numericFilterList = 11; // Filter List (Numeric)
  tagFilterList = 12; // Filter List (Tag)
  filterToggle = 13; // Filter Toggle
  numberFilter = 14; // Filter Numeric Comparison
  numberRangeFilter = 15; // Filter Numeric Range
  currentFilters = 16; // Current Filters
  hits = 17; // Hits
  loading = 18; // Loading
  stats = 19; // Stats
  searchBox = 20; // SearchBox
  queryRuleCustomData = 21; // QueryRuleCustomData
  relevantSort = 22; // RelevantSort
  sortBy = 23; // SortBy
  relatedItems = 24; // Related items
  filterMap = 25; // Filter Map
  multiHits = 26; // Multi Hits
}

enum TelemetryComponentParams {
  undefined = 0;
  apiKey = 1;
  appID = 2;
  attribute = 3;
  bounds = 4;
  clearMode = 5;
  client = 6;
  facets = 7;
  filter = 8;
  filterGroupForAttribute = 9;
  filterGroupIDs = 10;
  groupName = 11;
  hierarchicalAttributes = 12;
  indexName = 13;
  infiniteScrolling = 14;
  item = 15;
  items = 16;
  operator = 17;
  orderedFacets = 18;
  priority = 19;
  range = 20;
  searchTriggeringMode = 21;
  searcher = 22;
  isSelected = 23;
  selectionMode = 24;
  selectionModeForAttribute = 25;
  selections = 26;
  separator = 27;
  showItemsOnEmptyQuery = 28;
  isDisjunctiveFacetingEnabled = 29;
  isLoading = 30;
  mode = 31;
  number = 32;
  persistentSelection = 33;
  searchMode = 34;
  strategy = 35;
  groupIDs = 36;
  filters = 37;
  numericOperator = 38;
  selected = 39;
  filterStateParameter = 40;
  hitsSearcherParameter = 41;
  facetSearcherParameter = 42;
}

message TelemetryComponent {
  TelemetryComponentType type = 600;
  repeated TelemetryComponentParams parameters = 601;
  bool isConnector = 602;
}

message TelemetrySchema {
  repeated TelemetryComponent components = 700;
}
